# aspen

./: .gitignore  README.md  TODO.md  noxfile.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml  test.yml
src/aspen/: __init__.py  __main__.py  tree.py  ts-edit-behavior.org
src/aspen/asp/: defined.lp  delete.lp  edit.lp  example.lp  offset.lp  show.lp
src/aspen/asp/transform/: all.lp  defined.lp  edit.lp  show.lp
src/aspen/asp/utils/: all.lp  child.lp  named.lp  named_child_idx.lp  root.lp
src/aspen/asp/utils/clingo/: show_all.lp  symbol_signature.lp
src/aspen/asp/utils/generic/: all.lp
src/aspen/asp/utils/generic/derived_predicates/: include_all.lp  next_named_sibling.lp  show_all.lp
src/aspen/asp/utils/generic/queries/: delete_subtree.lp  include_all.lp  isomorphic.lp  node_at_path.lp  path_of_node.lp  (+1 more)
src/aspen/utils/: log.py  logging.py  parser.py  testing.py  tree_sitter_utils.py
tests/: common.py  test_main.py  test_metasp.py  test_tree.py  test_utils.py
tests/asp/: river_crossing.lp
tests/asp/encodings/: add_body_to_facts.lp  add_body_to_facts_depend.lp  add_var.lp  log_debug.lp  log_info.lp  log_warning.lp  metasp_all.lp  metasp_exceptions.lp  metasp_generate_type_facts.lp  metasp_main.lp  metasp_print_externals.lp  metasp_remove_ampersand.lp  multiline.lp  raise_error.lp  raise_error_no_loc.lp  remode_metasp_ampersand_macro_no_dunder.lp  rename_a_to_b.lp  replace_sugar.lp
tests/asp/inputs/: add_external_input.lp  grammar.lp  metasp_bad_occurrence.lp  metasp_bad_syntax.lp  metasp_ids.lp  metasp_integration.lp  metasp_occurrence_head.lp  metasp_rewrite_show.lp  metasp_telingo_gen_externals.lp  metasp_telingo_with_conditions_gen_externals.lp  telingo_sugar.lp  telingo_sugar_input.lp  telingo_type.lp
tests/asp/outputs/: ab_reified.txt  add_external_output.lp  error_missing_reified.txt  generated_telingo_type_facts.lp  metasp_head_occurrence.lp  metasp_ids.lp  metasp_integration.lp  metasp_rewrite_show.lp  metasp_telingo_gen_externals.lp  metasp_telingo_with_conditions_gen_externals.lp  missing_reified.txt  telingo_sugar_output.lp
tests/files/: ab_reified.txt  add_body_to_facts.lp  add_var.lp  log_debug.lp  log_error.lp  log_info.lp  log_warning.lp
