[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aspen-tree"
authors = [{ name = "Amadé Nemes", email = "nemesamade@gmail.com" }]
description = "aspen is a tool for analyzing and manipulating ASTs in the clingo ASP language, powered by tree-sitter."
requires-python = ">=3.9"
dependencies = [
    "clingo",
    "tree-sitter",
]
license = { file = "LICENSE" }
dynamic = ["version"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/krr-up/aspen.git/"

[project.optional-dependencies]
format = ["black", "isort", "autoflake"]
lint_pylint = ["pylint", "aspen[test]"]
typecheck = ["types-setuptools", "mypy", "tree-sitter-metasp", "tree-sitter-clingo"]
test = ["coverage[toml]", "tree-sitter-clingo", "tree-sitter-metasp"]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mkdoclingo"]
lsp = ["python-lsp-server", "rope", "pylsp-mypy", "pylsp-rope", "python-lsp-black"]
dev = ["aspen[test,typecheck,lint_pylint,lsp]"]

[project.scripts]
aspen = "aspen.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
line_length = 90

[tool.black]
line-length = 90

[tool.pylint.format]
max-line-length = 90

[tool.pylint.design]
max-args = 10
max-attributes = 7
max-bool-expr = 5
max-branches = 12
max-locals = 30
max-parents = 7
max-public-methods = 20
max-returns = 10
max-statements = 50
min-public-methods = 1

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true

[tool.pylint.basic]
argument-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
variable-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
good-names = ["_"]

[tool.coverage.run]
source = ["aspen", "tests"]
omit = ["*/aspen/__main__.py"]

[tool.coverage.report]
exclude_lines = ["assert", "nocoverage"]

[tool.mypy]
exclude = ["noxfile.py", "init.py"]
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
exclude = ["noxfile.py", "init.py"]
strict = true
